	PR c++/9683 	* decl2.c (prune_vars_needing_no_initialization): Do not throw 	away initializations for DECL_EXTERNAL VAR_DECLs. 	(finish_file): Adjust accordingly. 	* pt.c (instantiate_decl): Do not defer VAR_DECLs.

PR c++/9683
	* g++.dg/template/static3.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@63455 138bc75d-0d04-0410-961f-82ee72b054a4